fixed the sizing of the watchlist card by adding a new class to the section with css styling to limit hight - this allows the overflow to operation normal again

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
     
 }
 
+
+
 h1 {
     color: white;
 }
@@ -46,6 +48,7 @@ box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.04
 background: white;
 border-radius: 5px;
 min-height: 450px;
+height:450px;
 min-width: 100%;
 }
 .carouselCard {
@@ -161,8 +164,8 @@ h5 {
 
 }
 
-.userCard > ul {
-    max-height: 650px;
+.watchlistCard > ul {
+    max-height: 380px;
 }
 
 #tradingWidget{
